# inspect_proxmox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
scripts/ova/: Dockerfile.converter
scripts/virtualized_proxmox/: build_proxmox_auto.sh
src/proxmoxsandbox/: __init__.py  _proxmox_sandbox_environment.py  schema.py
src/proxmoxsandbox/_impl/: agent_commands.py  async_proxmox.py  built_in_vm.py  infra_commands.py  qemu_commands.py  sdn_commands.py  storage_commands.py  task_wrapper.py
src/proxmoxsandbox/experimental/: ctf4.py  snapshots.py  test_snapshot.py
src/proxmoxsandbox/scripts/ova/: convert_ova.sh  converter_script.sh
src/proxmoxsandbox/scripts/virtualized_proxmox/: .gitignore  build_proxmox_auto.sh
tests/proxmoxsandboxtest/: conftest.py  proxmox_sandbox_utils.py  test_built_in_vm.py  test_eval.py  test_proxmox_sandbox_agent_commands.py  test_proxmox_sandbox_environment_e2e.py  test_qemu_commands.py  test_sdn_commands.py  test_storage_commands.py
