[project]
name = "inspect-proxmox-sandbox"
version = "0.3.1"
description = "A Proxmox Sandbox Environment for Inspect"
readme = "README.md"
authors = [
    {name = "UK AI Security Institute"}
]
requires-python = ">=3.10"
dependencies = [
    "tenacity>=9.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pycdlib>=1.14.0",
    "pydantic-extra-types>=2.10.2",
    "pycurl>=7.45.0",
    "inspect_ai>=0.3.79",
    "rich>=13.9"
]

[project.entry-points."inspect_ai"]
"proxmox-sandbox" = "proxmoxsandbox._proxmox_sandbox_environment"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["tests"]
testpaths = ["tests/**/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmoxsandbox"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # flake8
  "D",   # pydocstyle
  "I",   # isort
]
ignore = [
  "D212",  # multi-line-summary-first-line
]

[tool.ruff.lint.per-file-ignores]
# Rationale: public objects in the tests and experimental dirs don't form part of the 
# package so drop the requirement for docstrings.
"tests/*" = ["D10"]  # undocumented-(public|magic)-*
"src/proxmoxsandbox/experimental/*" = ["D10"]  # undocumented-(public|magic)-*

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
plugins = "pydantic.mypy"
packages = ["proxmoxsandbox", "tests.proxmoxsandboxtest"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.3",
    "types-pycurl>=7.45.0"
]
